syntax = "proto3";

package protobuf;

message Buy {
  string companyBuy = 1;
  int32 qttBuy = 2;
  float priceMax = 3;
  string clientB = 4;
}
message Sell {
  string companySell = 1;
  int32 qttSell = 2;
  float priceMin = 3;
  string clientS = 4;
}

message ResponseAfterRecv{
  string rep = 1;
}

message General{
  oneof general {
    Buy buy = 1;
    Sell sell = 2;
  }
}
